--- a/5-07.md
+++ b/5-07.md
@@ -2,7 +2,7 @@
 
 ### Цель задания
 
-Данное домашнее задание поможет в понимание процессов разграничения трафика по признакам протоколов и инспектирования пакетов.
+Данное домашнее задание поможет вам разобраться в процессе разграничения трафика по признакам протоколов и инспектирования пакетов.
 
 В результате выполнения задания вы:
 1) Научитесь настраивать расширенный ACL
@@ -27,25 +27,26 @@
 
 Лабораторная работа заключается в настройке сервисов и межсетевого экранирования для разграничения таргетированного трафика между сетями. 
 
-1. Собрать сеть предложенную на схеме.
+Этапы выполнения:
+1. Соберите сеть, предложенную на схеме.
 <img width="800" alt="Ping_trouble" src="https://user-images.githubusercontent.com/85602495/168012223-cf10088b-3e83-4c9a-b92d-21e704f84463.png">
 
 
-2. Настроить ASA 5506-x для выполнения фильтрации трафика. 
+2. Настройте ASA 5506-x для выполнения фильтрации трафика. 
 
 <img width="600" alt="Ping_trouble" src="https://user-images.githubusercontent.com/85602495/168075163-0531bef8-6ba7-46ec-86f8-487e29f107ea.jpg">
 
-*Прислать pkt файл проекта.*
+*В качестве решения пришлите pkt файл проекта.*
 
 ---
 
 ### Лабораторная работа 2 "Настройка инспектирования трафика"
 
-Лабораторная работа заключается в настройки правил инспектирования сетевого трафика на прикладном уровне. 
+Лабораторная работа заключается в настройкe правил инспектирования сетевого трафика на прикладном уровне. 
 
-Настроить политику инспектирования по листам доступа для предложенных сетей из лабораторной работы № 1. 
+Ваша задача - настроить политику инспектирования по листам доступа для предложенных сетей из лабораторной работы № 1. 
 
-*Прислать скриншоты полученных отчетов по принятым политикам.*
+*В качестве решения пришлите скриншоты полученных отчетов по принятым политикам.*
 
 ---
 
