--- a/5-07.md
+++ b/5-07.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию 5.7 "Основные возможности NGFW"
+# Домашнее задание к занятию "Основные возможности NGFW"
 
 ### Цель задания
 
