--- a/5-07.md
+++ b/5-07.md
@@ -52,7 +52,11 @@
 
 ### Правила приема домашнего задания
 
-В личном кабинете отправлена ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”.
+В личном кабинете отправлены:
+
+- ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”;
+- pkt-файл с выполненным проектом;
+- файл в формате .png или .jpg.
 
 ### Критерии оценки
 
