--- a/5-08.md
+++ b/5-08.md
@@ -74,7 +74,7 @@
 
 Дополнительная информация по **Fail2Ban**:https://putty.org.ru/articles/fail2ban-ssh.html
 
-*В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат*
+*В качестве ответа пришлите события, которые попали в логи Suricata и Fail2Ban, прокомментируйте результат.*
 
 ---
 
