--- a/5-08.md
+++ b/5-08.md
@@ -2,12 +2,10 @@
 
 ### Цель задания
 
-Данное домашнее задание поможет вам ...
+Данное домашнее задание поможет вам познакомиться на практике с принципами и возможностями систем обнаружения вторжения (СОВ). В задании будут рассмотрены сетевая СОВ Suricsta и специализированная СОВ fail2ban.
 
 В результате выполнения задания вы:
-1) Научитесь ...
-2) Научитесь ...
-3) Научитесь ..
+1) Научитесь работе с СОВ suricata и fail2ban
 ------
 
 ### Инструкция к выполнению домашнего задания
