--- a/5-08.md
+++ b/5-08.md
@@ -4,8 +4,8 @@
 
 Данное домашнее задание поможет вам познакомиться на практике с принципами и возможностями систем обнаружения вторжения (СОВ). В задании будут рассмотрены сетевая СОВ Suricsta и специализированная СОВ fail2ban.
 
-В результате выполнения задания вы:
-1) Научитесь работе с СОВ suricata и fail2ban
+В результате выполнения задания вы научитесь работе с СОВ suricata и fail2ban
+
 ------
 
 ### Инструкция к выполнению домашнего задания
