--- a/5-08.md
+++ b/5-08.md
@@ -2,9 +2,9 @@
 
 ### Цель задания
 
-Данное домашнее задание поможет вам познакомиться на практике с принципами и возможностями систем обнаружения вторжения (СОВ). В задании будут рассмотрены сетевая СОВ Suricsta и специализированная СОВ fail2ban.
+Данное домашнее задание поможет вам познакомиться на практике с принципами и возможностями систем обнаружения вторжения (СОВ). В задании будут рассмотрены сетевая СОВ Suricata и специализированная СОВ fail2ban.
 
-В результате выполнения задания вы научитесь работе с СОВ suricata и fail2ban
+В результате выполнения задания вы научитесь работе с СОВ Suricata и fail2ban.
 
 ------
 
@@ -81,7 +81,6 @@
 В личном кабинете отправлены:
 
 - ссылка на документ (Google Doc) с выполненным заданием. В документе настроены права доступа “Просматривать могут все в Интернете, у кого есть ссылка”;
-- pkt-файл с выполненным проектом;
 - файл в формате .png или .jpg.
 
 ### Критерии оценки
