--- a/5-08.md
+++ b/5-08.md
@@ -4,7 +4,7 @@
 
 Данное домашнее задание поможет вам познакомиться на практике с принципами и возможностями систем обнаружения вторжения (СОВ). В задании будут рассмотрены сетевая СОВ Suricata и специализированная СОВ fail2ban.
 
-В результате выполнения задания вы научитесь работе с СОВ Suricata и fail2ban.
+В результате выполнения задания вы научитесь работе с СОВ Suricata и Fail2ban.
 
 ------
 
@@ -27,7 +27,7 @@
 - Установите **Suricata**;
 - Установите **Fail2Ban**.
 
-2. Подготовка системы злоумышленника: установите **nmap** и **thc-hydra** либо скачайте и установите **Kali linux**.
+2. Подготовка системы злоумышленника: установите **nmap** и **THC-Hydra** либо скачайте и установите **Kali Linux**.
 
 Обе системы должны находится в одной подсети.
 
