--- a/5-07.md
+++ b/5-07.md
@@ -29,7 +29,8 @@
 
 Этапы выполнения:
 1. Соберите сеть, предложенную на схеме.
-<img width="800" alt="Ping_trouble" src="https://user-images.githubusercontent.com/85602495/168012223-cf10088b-3e83-4c9a-b92d-21e704f84463.png">
+![image](https://github.com/netology-code/secnt-homeworks/blob/main/5-07.png)
+
 
 
 2. Настройте ASA 5506-x для выполнения фильтрации трафика. 
