--- a/5-07.md
+++ b/5-07.md
@@ -5,9 +5,9 @@
 Данное домашнее задание поможет вам разобраться в процессе разграничения трафика по признакам протоколов и инспектирования пакетов.
 
 В результате выполнения задания вы:
-1) Научитесь настраивать расширенный ACL
-2) Научитесь разграничивать трафик для различных сетей назначения
-3) Научитесь настраивать инспектирование по протоколам
+1) Научитесь настраивать расширенный ACL;
+2) Научитесь разграничивать трафик для различных сетей назначения;
+3) Научитесь настраивать инспектирование по протоколам.
 
 ------
 
@@ -23,7 +23,7 @@
 
 ---
 
-### Лабораторная работа 1 "Настройка расширенных листов контроля доступа"
+### Лабораторная работа "Настройка расширенных листов контроля доступа"
 
 Лабораторная работа заключается в настройке сервисов и межсетевого экранирования для разграничения таргетированного трафика между сетями. 
 
@@ -33,9 +33,9 @@
 
 
 
-2. Настройте ASA 5506-x для выполнения фильтрации трафика. 
-
-<img width="600" alt="Ping_trouble" src="https://user-images.githubusercontent.com/85602495/168075163-0531bef8-6ba7-46ec-86f8-487e29f107ea.jpg">
+2. Настройте правила фильтрации на ASA 5506-X, используя таблицу ниже. Все действия с трафиком, в том числе запрещающие, должны быть явно описаны в ACL.
+   
+![photo_2023-07-04_12-47-50](https://github.com/netology-code/secnt-homeworks/assets/77622076/6995eee6-0013-46ff-a138-fe9a1ff10bc3)
 
 *В качестве решения пришлите pkt файл проекта.*
 
@@ -45,7 +45,7 @@
 
 Лабораторная работа заключается в настройкe правил инспектирования сетевого трафика на прикладном уровне. 
 
-Ваша задача - настроить политику инспектирования по листам доступа для предложенных сетей из лабораторной работы № 1. 
+Ваша задача - используя созданные в лабораторной работе ACL, создать отдельные классы с описанием трафика и применить к ним инспектирование разрешенных протоколов.
 
 *В качестве решения пришлите скриншоты полученных отчетов по принятым политикам.*
 
