--- a/5-07.md
+++ b/5-07.md
@@ -23,7 +23,7 @@
 
 ---
 
-### Лабораторная работа "Настройка расширенных листов контроля доступа"
+### Лабораторная работа №1 "Настройка расширенных листов контроля доступа"
 
 Лабораторная работа заключается в настройке сервисов и межсетевого экранирования для разграничения таргетированного трафика между сетями. 
 
@@ -41,11 +41,18 @@
 
 ---
 
-### Лабораторная работа 2 "Настройка инспектирования трафика"
+### Лабораторная работа №2 "Настройка инспектирования трафика"
 
 Лабораторная работа заключается в настройкe правил инспектирования сетевого трафика на прикладном уровне. 
 
-Ваша задача - используя созданные в лабораторной работе ACL, создать отдельные классы с описанием трафика и применить к ним инспектирование разрешенных протоколов.
+Ваша задача - используя созданные в лабораторной работе №1 ACL, создать отдельные классы с описанием трафика и применить к ним инспектирование разрешенных протоколов.
+
+Пример:  
+class-map PC0
+ match access-list PC0_ACL
+policy-map global_policy
+ class PC0
+  inspect ftp
 
 *В качестве решения пришлите скриншоты полученных отчетов по принятым политикам.*
 
