--- a/5-07.md
+++ b/5-07.md
@@ -45,7 +45,7 @@
 
 Лабораторная работа заключается в настройкe правил инспектирования сетевого трафика на прикладном уровне. 
 
-Ваша задача - используя созданные в лабораторной работе №1 ACL, создать отдельные классы с описанием трафика и применить к ним инспектирование разрешенных протоколов.
+Ваша задача – используя созданные в лабораторной работе №1 ACL, создать отдельные классы с описанием трафика и применить к ним инспектирование разрешенных протоколов.
 
 Пример:  
 ```
