--- a/5-06.md
+++ b/5-06.md
@@ -22,7 +22,7 @@
 7. Любые вопросы по решению задач задавайте в чате учебной группы.
 
 ---
-### Лабораторная работа "Настройка статического NAT и PAT overload"
+### Лабораторная работа "Межсетевое экранирование на основе зон, stateful/stateless packet inspection"
 
 Лабораторная работа заключается в настройке МСЭ компании. ЛВС логически разделена на пользовательскую подсеть, подсеть принтеров и подсеть с сервером DMZ. Для каждой из этих зон расписаны правила доступа в соседние.
 Схема сети 
