--- a/5-07.md
+++ b/5-07.md
@@ -56,7 +56,7 @@ policy-map global_policy
   inspect ftp
   ```
 
-*В качестве решения пришлите скриншот кофнига, содержащий описание классов и политики.*
+*В качестве решения пришлите скриншот конфига, содержащего описание классов и политики.*
 
 ---
 
