--- a/5-06.md
+++ b/5-06.md
@@ -52,10 +52,11 @@
 
 *Cisco PT имеет баг в части настройки МСЭ: политику оп-умолчанию нельзя редактировать. Поэтому чтобы инспекция icmp нормально работала, удалите политику по умолчанию и создайте новую:
 no service-policy global_policy global
+no policy-map global_policy
+
 policy-map test
  class inspection_default
-  inspect http 
-  inspect icmp 
+  inspect *протокол*
 service-policy test global
 
 *В качестве ответа приложите вывод команды "sh run" с МСЭ*
